# Passclip

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PLAYBOOK.md  README.md  SECURITY.md  pass_cli.py  passclip.py  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
completions/: passcli.bash  passcli.fish  passcli.zsh  passclip.bash  passclip.fish  passclip.zsh
docs/: CHANGELOG.md  DISCLAIMER.md  GUIDE.md  SETUP.md  changelog.md  disclaimer.md  examples.md  integration.md  setup.md  user-guide.md
scripts/: audit_wheel.py
tests/: test_core.py  test_validation.py
