[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passclip"
version = "1.1.3"
description = "Security-focused CLI for managing secrets in GPG-backed environments. Extends pass with TOTP, AES-256-GCM backups, secure clipboard handling, and runtime secret injection."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Rutvik" },
]
keywords = [
    "password-manager",
    "pass",
    "gpg",
    "clipboard",
    "totp",
    "otp",
    "security",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
otp = ["pyotp>=2.8"]
all = ["pyperclip>=1.8", "pyotp>=2.8"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
passclip = "passclip:main"

[project.urls]
Homepage = "https://github.com/rxb06/Passclip"
Repository = "https://github.com/rxb06/Passclip"
Documentation = "https://github.com/rxb06/Passclip/tree/main/docs"
Issues = "https://github.com/rxb06/Passclip/issues"
Changelog = "https://github.com/rxb06/Passclip/blob/main/docs/changelog.md"

[tool.setuptools]
py-modules = ["passclip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
